--- a/talent-hub.html
+++ b/talent-hub.html
@@ -9,15 +9,19 @@
     </div>
 
     {% for partner in site.data.partners %}
-      <div style="border: 1px solid #C4C4C4;border-radius: 1rem;padding: 1rem;margin-bottom:1rem;">
+      <div style="border: 1px solid #C4C4C4;border-radius: 1rem;padding: 1rem;margin-bottom:1rem; min-height: 12rem;">
+        <div style="width: 10rem;height: 10rem;float: left;margin-right: 1rem;border-radius: 1rem; background: url('{{ partner.image }}');background-size: contain;background-position: center;background-repeat: no-repeat;"></div>
         <h3 style="margin:0;">{{ partner.name }}</h3>
         <div class="tags">
           {% for tag in partner.tags %}
-          <span class="tag-{{ tag }}">{{ tag }}</span>
+          <span class="tag tag-{{ tag | slugify }}">{{ tag }}</span>
           {% endfor %}
         </div>
+        <div class="links">
+          <a href="https://google.com" class="Discord-icon">Discord</a>
+        </div>
         <p>{{ partner.description }}</p>
-        <a href="https://dapp-craft.com/">View site</a>
+        <a target="_blank" href="{{ partner.link }}">Website</a>
       </div>
     {% endfor %}
 
