--- a/talent-hub.html
+++ b/talent-hub.html
@@ -18,10 +18,14 @@
           {% endfor %}
         </div>
         <div class="links">
-          <a href="https://google.com" class="Discord-icon">Discord</a>
+          {% if partner.website %}<a href="{{ partner.website }}" class="Discord-icon">{% include social-icon.html icon="Website" %}</a>{% endif %}
+          {% if partner.email %}<a href="mailto:{{ partner.email }}" class="Discord-icon">{% include social-icon.html icon="Email" %}</a>{% endif %}
+          {% if partner.discord %}<a href="{{ partner.discord }}" class="Discord-icon">{% include social-icon.html icon="Discord" %}</a>{% endif %}
+          {% if partner.twitter %}<a href="{{ partner.twitter }}" class="Discord-icon">{% include social-icon.html icon="Twitter" %}</a>{% endif %}
+          {% if partner.instagram %}<a href="{{ partner.instagram }}" class="Discord-icon">{% include social-icon.html icon="Instagram" %}</a>{% endif %}
+          {% if partner.linkedin %}<a href="{{ partner.linkedin }}" class="Discord-icon">{% include social-icon.html icon="Linkedin" %}</a>{% endif %}
         </div>
         <p>{{ partner.description }}</p>
-        <a target="_blank" href="{{ partner.link }}">Website</a>
       </div>
     {% endfor %}
 
