--- a/talent-hub.html
+++ b/talent-hub.html
@@ -11,7 +11,7 @@
     <h3>Provided Services</h3>
     <table>
       <tr>
-          <td style="width: 20%;"><span class="tag tag-wearables">Wearable Design</span></td>
+          <td style="width: 12rem;"><span class="tag tag-wearables">Wearable Design</span></td>
           <td>3D Modeling skills to produce a wearable under the acceptance criteria of Decentraland's DAO Curators Committee. Such us hats, t-shirts and full-body skins.</td>
       </tr>
       <tr>
