rename partners url for SEO

--- a/metaverse-agencies.html
+++ b/metaverse-agencies.html
@@ -4,7 +4,7 @@
   {% include sidebar.html %}
 	<section>
     <div class="home-content">
-      {% capture content %}{% include talent-hub.md %}{% endcapture %}
+      {% capture content %}{% include partners.md %}{% endcapture %}
       {{ content | markdownify }}
     </div>
 
